python/src/rabbit/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rabbitmq-ingress
spec:
    rules:
        - host: rabbitmq-manager.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: rabbitmq
                            port:
                                number: 15672
